# event_study_streamlit

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: demo_plot.py  simple_event_study.ipynb  streamlit_demo.py
examples/data_input/: F-F_Research_Data_Factors_daily.csv  event_test.csv  events.csv  factors.csv  returns.csv
examples/data_output/: event_study_results.csv
src/event_studies/: __init__.py  config.py  estimator.py  event_study.py  models.py  plot.py  statistics.py  validator.py  volatility.py  windows.py
tests/: conftest.py  test_event_study.py  test_volatility.py
